--- a/market/templates/market/index.html
+++ b/market/templates/market/index.html
@@ -75,6 +75,25 @@
             </h6>
         </a>
     </div>
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'market:customers' %}">
+            <img src="{% static 'market/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                مشتری ها
+            </h6>
+        </a>
+    </div>
+
+    
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'market:shippers' %}">
+            <img src="{% static 'market/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                حمل کننده ها
+            </h6>
+        </a>
+    </div>
+
 
 
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
