my accounts , my events

--- a/attachments/templates/attachments/includes/comments-app/template.html
+++ b/attachments/templates/attachments/includes/comments-app/template.html
@@ -23,7 +23,7 @@
                 </div>
                 {% if add_comment_form %}
                 <div class="media rtl ">
-                    <img title="{{me_profile.full_name}}" src="{{me_profile.image}}" class="rounded-circle" width="64" alt="">
+                    <img title="{{me_person.full_name}}" src="{{me_person.image}}" class="rounded-circle" width="64" alt="">
                     <div class="media-body mr-2"> 
                         <textarea maxlength="500" id="comment_inputed" v-model="comment" class="farsi form-control"
                             rows="5"></textarea>
