--- a/authentication/templates/authentication/index.html
+++ b/authentication/templates/authentication/index.html
@@ -11,19 +11,7 @@
       <h6 class="text-center">اشخاص</h6>
     </a>
   </div>
-
-
-  <div class="col-6 col-md-3 col-lg-2 text-center my-3">
-    <a href="{% url 'authentication:profiles'  %}">
-      <img
-        src="{% static 'accounting/img/invoice.png' %}"
-        width="64em"
-        class="mb-2"
-        alt=""
-      />
-      <h6 class="text-center">پروفایل ها</h6>
-    </a>
-  </div>
+ 
 
 
   <div class="col-md-12">
@@ -36,17 +24,8 @@
       </div>
     </div>
   </div>
-  <div class="col-md-12">
-    <div class="card">
-      <div class="card-header">
-        <h5>انتخاب پروفایل</h5>
-      </div>
-      <div class="card-body">
-        {% include "authentication/includes/profile-app/select-template.html" %}
-      </div>
-    </div>
-  </div>
+   
 </div>
-{% endblock content %} {% block script %} {% include "authentication/includes/person-app/select-script.html" %}
-{% include "authentication/includes/profile-app/select-script.html" %}
- {% endblock script %}
+{% endblock content %} {% block script %}
+{% include "authentication/includes/person-app/select-script.html" %}
+{% endblock script %}
