--- a/core/templates/core/includes/page-thumbnail-header-app/template.html
+++ b/core/templates/core/includes/page-thumbnail-header-app/template.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% if set_page_thumbnail_header_form %}
+  
 <div id="accordion-set-page-thumbnail" class="rtl text-right farsi">
   <div class="card" id="set-page-thumbnail-app">
     <div class="card-header" id="heading-set-page-thumbnail">
@@ -121,3 +123,4 @@
     </div>
   </div>
 </div>
+{% endif %}
