--- a/accounting/templates/accounting/financial-document.html
+++ b/accounting/templates/accounting/financial-document.html
@@ -1,4 +1,5 @@
-{% extends "accounting/layout.html" %} {% block content %}
+{% extends "accounting/layout.html" %}
+ {% block content %}
 <div class="row rtl farsi">
   <div class="col-md-12">
     <div class="card">
