--- a/market/templates/market/includes/supplier-app/navbar.html
+++ b/market/templates/market/includes/supplier-app/navbar.html
@@ -7,7 +7,7 @@
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <a class="dropdown-item" style="text-align: center;" href="{{me_supplier.get_absolute_url}}">
-        <img src="{{me_profile.image}}" class="rounded-circle" width="128" alt="">
+        <img src="{{me_person.image}}" class="rounded-circle" width="128" alt="">
       </a>
 
       <a class="dropdown-item" style="text-align: center;" href="{{me_supplier.get_absolute_url}}">
